portfolio width overlap bug fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -69,7 +69,12 @@ body {
   }
 
   .project_description{
+    width: 40%;
     height: 53rem;
+  }
+
+  .swiper2{
+    width: 55%;
   }
 
 }
